<resources>
    <string name="app_name">cashPokerProgresive</string>

    <string name="Pagar">Pagar</string>
    <string name="Jugar">Jugar</string>
    <string name="Retirar">Retirar</string>
    <string name="Acreditar">Acreditar</string>
    <string name="Bonus">Bonus</string>
    <string name="cero">0</string>
    <string name="Apuesta1">1</string>
    <string name="Apuesta2">2</string>
    <string name="Apuesta3">5</string>
    <string name="Apuesta4">10</string>
    <string name="Apuesta5">20</string>
    <string name="Apuesta6">+</string>
    <string name="premio1">ER</string>
    <string name="premio2">EC</string>
    <string name="premio3">Pok</string>
    <string name="premio4">Full</string>
    <string name="premio5">ES</string>
    <string name="premio6">Col</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Apostemos">Apostemos</string>
    <string name="jogo">En juego</string>
    <string name="Pago">Pagando</string>
    <string name="Retirando">Retirando</string>
    <string name="progressive">Progressive</string>
    <string name="BaseProgresivo">$1200</string>
    <string name="title_activity_codeaut">codeaut</string>
    <string name="title_activity_cpplogin">Cash Poker Progressive</string>
    <string name="CodigoInvalido">Código Invalido</string>
    <string name="PagoAprobado">Pago Aprobado</string>
    <string name="Paracontinuar">Para continuar necesita mínimo una apuesta.</string>
    <string name="DebSelJug">Antes debe Seleccionar un Jugador.</string>
    <string name="Ingrclave">Ingrese clave</string>
    <string name="Supervisor">Supervisor</string>
    <string name="Dealer">Dealer</string>
    <string name="DeseaRetirarse">¿Seguro qué desea retirarse?</string>
    <string name="ConfirmaPago">¿Confirma el pago de este premio?</string>
    <string name="pagarAlJugador">Pagar al Jugador </string>
    <string name="fichas"> fichas</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="passwordDelaer">Contraseña Dealer</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="error_UsuarioycontraInv">Su usuario o contraseña son invalidos</string>
    <string name="action_sign_in_short"></string>


</resources>
